Fix statistics card alignment issue

--- a/src/css/statistics.css
+++ b/src/css/statistics.css
@@ -21,12 +21,15 @@
 }
 
 .statistics__card {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
   gap: 4rem;
-  padding: 0 0 0 1rem;
   border: 2px solid var(--clr-neutral-900);
   border-radius: var(--radius-10);
+}
+
+.statistics__card-left-content {
+  margin-left: 1rem;
 }
 
 .statistics__card-icon-container {
@@ -55,6 +58,9 @@
 .statistics__card-number {
   font-weight: 600;
   font-size: 24px;
+  /* margin-right: 1px;
+  margin-top: 2.5rem;
+  margin-bottom: 0px; */
 }
 
 .icon {
